<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="library">Library</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="playlist">Playlist</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="no_music">No music found on the device</string>
    <string name="no_playlist">No playlist are created yet</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="delete">Delete</string>
    <string name="loading">Loading library</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_exists">Playlist name exists</string>
    <string name="confirm_delete">Are you sure deleting this playlist?</string>
    <string name="add_songs">Add Songs</string>
    <string name="check_mark">CheckMark</string>
    <string name="error_loading">Error loading music</string>
    <string name="last_song">This is last song</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>