<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/root_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/libraryTabContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <FrameLayout
                    android:id="@+id/albumTabContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <FrameLayout
                    android:id="@+id/artistTabContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <FrameLayout
                    android:id="@+id/playlistTabContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </FrameLayout>
            </FrameLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/small_controller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sc_thumbnail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/thumbnail"
                    android:src="@mipmap/baseline_music_video_black_48" />

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageButton
                    android:id="@+id/play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/play"
                    android:src="@mipmap/baseline_play_circle_filled_black_48" />

                <ImageButton
                    android:id="@+id/skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/skip"
                    android:src="@mipmap/baseline_fast_forward_black_48" />
            </LinearLayout>

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/bottom_navigation" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>